--- a/FCG-Users.Application/FCG-Users.Application.csproj
+++ b/FCG-Users.Application/FCG-Users.Application.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\FCG-Users.Domain\FCG-Users.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
