--- a/FCG-Users.Api/appsettings.json
+++ b/FCG-Users.Api/appsettings.json
@@ -1,4 +1,13 @@
 {
+  "Jwt": {
+    "Key": "9y4XJg0aTphzFJw3TvksRvqHXd+Q4VB8f7ZvU08N+9Q=",
+    "Issuer": "FGC-Users",
+    "Audience": "API",
+    "ExpiresMinutes": "120"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=(LocalDb)\\MSSQLLocalDB;Initial Catalog=Fcg-Users;Integrated Security=SSPI;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
