Refatorando para Event Sourcing

--- a/FCG-Users.Api/appsettings.json
+++ b/FCG-Users.Api/appsettings.json
@@ -10,12 +10,17 @@
   },
   "ServiceBus": {
     "ConnectionString": "",
-    "Queues": {
-      "GamesEvents": "games-events",
-      "UsersEvents": "users-events",
-      "LibrariesEvents": "libraries-events"
+    "Topics": {
+      "Users": "users-topic"
+    },
+    "Subscriptions": {
+      "Users": "users-api-sub"
     }
-  },  
+  },
+  "MongoSettings": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "Database": "EventStoreDb"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
