--- a/FCG-Users.Domain/FCG-Users.Domain.csproj
+++ b/FCG-Users.Domain/FCG-Users.Domain.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FCG.Shared.Contracts" Version="1.0.19" />
+  </ItemGroup>
+
 </Project>
