--- a/FCG-Users.Consumer/Properties/launchSettings.json
+++ b/FCG-Users.Consumer/Properties/launchSettings.json
@@ -1,7 +1,7 @@
 ﻿{
-  "$schema": "http://json.schemastore.org/launchsettings.json",
+  "$schema": "https://json.schemastore.org/launchsettings.json",
   "profiles": {
-    "FCG_Users.WorkerService": {
+    "FCG_Users.Consumer": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "environmentVariables": {
