isolando implementações de event sourcing para o projeto shared

--- a/FCG-Users.Api/appsettings.json
+++ b/FCG-Users.Api/appsettings.json
@@ -19,7 +19,8 @@
   },
   "MongoSettings": {
     "ConnectionString": "mongodb://localhost:27017",
-    "Database": "EventStoreDb"
+    "Database": "EventStoreDb",
+    "Collection": "Events"
   },
   "Logging": {
     "LogLevel": {
