--- a/FCG-Users.Consumer/FCG-Users.Consumer.csproj
+++ b/FCG-Users.Consumer/FCG-Users.Consumer.csproj
@@ -11,6 +11,7 @@
 	<ItemGroup>
 		<PackageReference Include="Azure.Messaging.ServiceBus" Version="7.20.1" />
 		<PackageReference Include="FCG.Shared.Contracts" Version="1.0.33" />
+		<PackageReference Include="Microsoft.ApplicationInsights.WorkerService" Version="2.22.0" />
 		<PackageReference Include="Microsoft.Extensions.Hosting" Version="10.0.1" />
 	</ItemGroup>
 	
