--- a/k8s/consumer/hpa.yaml
+++ b/k8s/consumer/hpa.yaml
@@ -2,7 +2,7 @@ apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: users-consumer-hpa
-  namespace: users
+  namespace: fcg-users
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
