--- a/k8s/api/ingress.yaml
+++ b/k8s/api/ingress.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: users-api-ingress
-  namespace: fcg-users
+  namespace: users
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$2
     nginx.ingress.kubernetes.io/use-regex: "true"
