--- a/k8s/configmap.yaml
+++ b/k8s/configmap.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: fcg-config
-  namespace: fcg-users
+  namespace: users
 data:
   TOPIC_USERS: "users-topic"
   TOPIC_GAMES: "games-topic"
