--- a/k8s/secretproviderclass-users.yaml
+++ b/k8s/secretproviderclass-users.yaml
@@ -2,7 +2,7 @@ apiVersion: secrets-store.csi.x-k8s.io/v1
 kind: SecretProviderClass
 metadata:
   name: fcg-keyvault-secrets
-  namespace: fcg-users
+  namespace: users
 spec:
   provider: azure
   parameters:
