--- a/k8s/api/deployment.yaml
+++ b/k8s/api/deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: users-api
-  namespace: fcg-users
+  namespace: users
   labels:
     app: users-api
 spec:
