--- a/k8s/api/hpa.yaml
+++ b/k8s/api/hpa.yaml
@@ -2,7 +2,7 @@ apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: users-api-hpa
-  namespace: fcg-users
+  namespace: users
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
