--- a/k8s/api/service.yaml
+++ b/k8s/api/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: users-api
-  namespace: fcg-users
+  namespace: users
   labels:
     app: users-api
 spec:
