--- a/k8s/api/deployment.yaml
+++ b/k8s/api/deployment.yaml
@@ -18,6 +18,7 @@ spec:
       containers:
       - name: users-api
         image: alexandresorza/fcg-users-api:latest
+        imagePullPolicy: Always
         ports:
         - containerPort: 8080
         volumeMounts:
