--- a/FCG-Users.Consumer/Dockerfile
+++ b/FCG-Users.Consumer/Dockerfile
@@ -32,7 +32,8 @@ LABEL maintainer="FCG Team" \
 
 WORKDIR /app
 
-RUN addgroup -g 1000 appuser && \
+RUN apk add --no-cache icu-libs && \
+    addgroup -g 1000 appuser && \
     adduser -u 1000 -G appuser -s /bin/sh -D appuser && \
     chown -R appuser:appuser /app
 
@@ -41,6 +42,7 @@ COPY --from=build --chown=appuser:appuser /app/publish .
 USER appuser
 
 ENV DOTNET_RUNNING_IN_CONTAINER=true \
-    DOTNET_SYSTEM_GLOBALIZATION_INVARIANT=true
+    DOTNET_SYSTEM_GLOBALIZATION_INVARIANT=false \
+    DOTNET_LOCALE=en-US
 
 ENTRYPOINT ["dotnet", "FCG-Users.Consumer.dll"]
